# docs/swagger/swagger.yml
@@ -166,6 +166,9 @@ definitions:
                 format: uuid
                 type: string
                 x-go-name: AddressID
+            payment_nonce:
+                type: string
+                x-go-name: PaymentNonce
             shipping_rate_id:
                 format: uuid
                 type: string
@@ -184,6 +187,26 @@ definitions:
                 x-go-name: OrderReference
         type: object
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/orders/entities
+    CreatePaymentProfileRequest:
+        properties:
+            card_number:
+                type: string
+                x-go-name: CardNumber
+            expiration_date:
+                type: string
+                x-go-name: ExpirationDate
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
+    CreatePaymentProfileResponse:
+        properties:
+            payment_profile_id:
+                type: string
+                x-go-name: PaymentProfileID
+            profile_id:
+                type: string
+                x-go-name: ProfileID
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     CreateProductRequestBody:
         properties:
             attributes:
@@ -268,6 +291,16 @@ definitions:
         type: object
         x-go-name: Response
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/transport/http
+    FraudItem:
+        properties:
+            fraudAction:
+                type: string
+                x-go-name: FraudAction
+            fraudFilter:
+                type: string
+                x-go-name: FraudFilter
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     GetAddressResponse:
         properties:
             address:
@@ -382,6 +415,15 @@ definitions:
                 x-go-name: PaymentMethods
         type: object
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/stripe/entities
+    GetPaymentProfileResponse:
+        properties:
+            payment_profiles:
+                items:
+                    $ref: '#/definitions/PaymentProfile'
+                type: array
+                x-go-name: PaymentProfiles
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     GetProductResponse:
         properties:
             attributes:
@@ -728,6 +770,32 @@ definitions:
     OrderStatus:
         type: string
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/orders/entities
+    Payload:
+        properties:
+            authAmount:
+                format: double
+                type: number
+                x-go-name: AuthAmount
+            avsResponse:
+                type: string
+                x-go-name: AvsResponse
+            entityName:
+                type: string
+                x-go-name: EntityName
+            fraudList:
+                items:
+                    $ref: '#/definitions/FraudItem'
+                type: array
+                x-go-name: FraudList
+            id:
+                type: string
+                x-go-name: ID
+            responseCode:
+                format: int64
+                type: integer
+                x-go-name: ResponseCode
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     PaymentMethod:
         properties:
             brand:
@@ -762,6 +830,22 @@ definitions:
                 x-go-name: Wallet
         type: object
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/stripe/entities
+    PaymentProfile:
+        properties:
+            card_number:
+                type: string
+                x-go-name: CardNumber
+            card_type:
+                type: string
+                x-go-name: CardType
+            expiration_date:
+                type: string
+                x-go-name: ExpirationDate
+            id:
+                type: string
+                x-go-name: ID
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     Product:
         properties:
             data:
@@ -918,6 +1002,24 @@ definitions:
                 x-go-name: StateCode
         type: object
         x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/cart/entities
+    WebhookRequest:
+        properties:
+            eventDate:
+                type: string
+                x-go-name: EventDate
+            eventType:
+                type: string
+                x-go-name: EventType
+            notificationId:
+                type: string
+                x-go-name: NotificationID
+            payload:
+                $ref: '#/definitions/Payload'
+            webhookId:
+                type: string
+                x-go-name: WebhookID
+        type: object
+        x-go-package: github.com/nurdsoft/nurd-commerce-core/internal/authorizenet/entities
     WishlistItem:
         properties:
             created_at:
@@ -1075,6 +1177,88 @@ paths:
             summary: Update Address
             tags:
                 - addresses
+    /authorizenet/payment-profiles:
+        get:
+            description: '### Get all payment profiles of the customer'
+            operationId: GetPaymentProfiles
+            produces:
+                - application/json
+            responses:
+                "200":
+                    description: Payment profiles retrieved successfully
+                    schema:
+                        $ref: '#/definitions/GetPaymentProfileResponse'
+                "400":
+                    description: Bad Request
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+                "500":
+                    description: Internal Server Error
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+            summary: Get Customer Payment Profiles
+            tags:
+                - authorizenet
+        post:
+            description: '### Create a payment profile'
+            operationId: CreatePaymentProfileRequest
+            parameters:
+                - description: The payment profile to create
+                  in: body
+                  name: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/CreatePaymentProfileRequest'
+                  x-go-name: Body
+            produces:
+                - application/json
+            responses:
+                "200":
+                    description: Customer payment profile created successfully
+                    schema:
+                        $ref: '#/definitions/CreatePaymentProfileResponse'
+                "400":
+                    description: Bad Request
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+                "500":
+                    description: Internal Server Error
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+            summary: Create Payment Profile
+            tags:
+                - authorizenet
+    /authorizenet/webhook:
+        post:
+            description: |-
+                Authorize.net Webhook
+                ### Handle events from Authorize.net
+            operationId: WebhookRequest
+            parameters:
+                - description: The webhook event data
+                  in: body
+                  name: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/WebhookRequest'
+                  x-go-name: Body
+            produces:
+                - application/json
+            responses:
+                "200":
+                    description: Event handled successfully
+                    schema:
+                        $ref: '#/definitions/DefaultResponse'
+                "400":
+                    description: Bad Request
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+                "500":
+                    description: Internal Server Error
+                    schema:
+                        $ref: '#/definitions/DefaultError'
+            tags:
+                - authorizenet
     /cart/items:
         delete:
             description: '### Clear the list of items in the cart'
